added html for city name and current day

--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
                 </div>
             </div>
             <div class="col-md-8">
+                <div class="row">
+                    <h3 id="current-city" class="col-12"></h3>
+                </div>
 
                 <div class="row">
-                    <h3 id="city-temp" class="col-md-12"></h3>
+                    <h3 id="city-temp" class="col-12"></h3>
                 </div>
 
                 <div class="row">
